PROJECT(MICROSOFT LANGUAGES CXX)

ENABLE_LANGUAGE(C)

CMAKE_MINIMUM_REQUIRED(VERSION "2.8")

#SET( CTEST_COST_DATA_FILE "TODO" )
SET( SITE "home.nabla.mobi" )
SET( DROP_SITE "192.168.0.28" )
SET( DROP_LOCATION "/cdash/submit.php?project=MICROSOFT" )

INCLUDE(${PROJECT_SOURCE_DIR}/../../config/Project.cmake)

SET(EXPORT_FILE microsoft-build.cmake)

INSTALL(EXPORT microsoft-install
        DESTINATION lib/microsoft-${PROJECT_VERSION_FULL}
        FILE microsoft-install.cmake)

MESSAGE( STATUS "PROJECT_INSTALL_DIR: " ${PROJECT_INSTALL_DIR} )
MESSAGE( STATUS "PROJECT_BINARY_DIR: " ${PROJECT_BINARY_DIR} )
MESSAGE( STATUS "PROJECT_SOURCE_DIR: " ${PROJECT_SOURCE_DIR} )
MESSAGE( STATUS "CMAKE_BINARY_DIR:         " ${CMAKE_BINARY_DIR} )
MESSAGE( STATUS "CMAKE_CURRENT_BINARY_DIR: " ${CMAKE_CURRENT_BINARY_DIR} )
MESSAGE( STATUS "CMAKE_SOURCE_DIR:         " ${CMAKE_SOURCE_DIR} )
MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )

# Just process the sub directories
ADD_SUBDIRECTORY(src)
